src/yini_test/cases/golden/lenient/valid/disable-line/disable-line-basic.yini
@yini

^ Application
--key = "val"
key = "kept"

