src/yini_test/cases/golden/lenient/invalid/keys/key-with-hyphen.yini
@yini

^ Keys
my-key = "val"
